feat/cypress: add wait-on to cypress run step to assure that app is accessible before running tests

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
+          wait-on: 'http://localhost:3000'
+          wait-on-timeout: 60
           working-directory: ./web/lrm/client
           build: npm run build
           start: npm run dev
