--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -13,6 +13,15 @@ jobs:
   cypress-run:
     runs-on: ubuntu-22.04
     env:
+      NUXT_PUBLIC_VHOST_MAP: |
+        {
+          "15-15_v1.5": "1.0",
+          "15-nexsis_v1.8": "1.0",
+          "15-smur_v1.4": "1.0",
+          "15-gps_v1.0": "1.0"
+        }
+      NUXT_PUBLIC_CLIENT_MAP: |
+        [['fr.health.samuA',['fr.health.samuC']],['fr.health.samuC',['fr.health.samuA']]]
       NUXT_PUBLIC_MODEL_BRANCH: develop
       NUXT_PUBLIC_BACKEND_LRM_SERVER: integration.hub.esante.gouv.fr
     steps:
