--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -38,5 +38,5 @@ jobs:
           wait-on-timeout: 60
           working-directory: ./web/lrm/client
           build: npm run build
-          start: npm run dev
+          start: npm run start
           browser: electron
