--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -39,4 +39,4 @@ jobs:
           working-directory: ./web/lrm/client
           build: npm run build
           start: npm run start
-          browser: electron
+          browser: chrome
