--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,8 +39,11 @@ jobs:
           elif [[ "$RELEASE_NAME" == landing-* ]]; then
             PROJECT="landing"
             VERSION=${RELEASE_NAME#landing-}
+          elif [[ "$RELEASE_NAME" == landing-* ]]; then
+            PROJECT="healthcheck"
+            VERSION=${RELEASE_NAME#healthcheck-}
           else
-            echo "Invalid release name prefix. Must be 'dispatcher', 'lrm' or 'landing'."
+            echo "Invalid release name prefix. Must be 'dispatcher', 'lrm', 'landing' or 'healthchek'."
             exit 1
           fi
           
@@ -94,4 +97,13 @@ jobs:
           push: true
           platforms: linux/amd64
           tags: ghcr.io/${{ github.repository_owner }}/hub-web-landing:${{ steps.extract_info.outputs.version }}
+          context: ./web/landing
+
+      - name: Build and push landing Docker image
+        if: steps.extract_info.outputs.project == 'landing'
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          platforms: linux/amd64
+          tags: ghcr.io/${{ github.repository_owner }}/hub-healthcheck:${{ steps.extract_info.outputs.version }}
           context: ./web/landing
