--- a/hub/dispatcher/src/main/resources/application-local.properties
+++ b/hub/dispatcher/src/main/resources/application-local.properties
@@ -2,3 +2,5 @@ spring.rabbitmq.host=localhost
 
 spring.rabbitmq.ssl.key-store-password=certPassword
 spring.rabbitmq.ssl.trust-store-password=trustStore
+
+dispatcher.vhost="15-15_v1.5"
