add dispatcher healthcheck

--- a/hub/dispatcher/src/main/resources/application.properties
+++ b/hub/dispatcher/src/main/resources/application.properties
@@ -23,4 +23,8 @@ client.preferences.file=file:/config/client.preferences.csv
 dispatcher.default.ttl=86400
 dispatcher.vhost=${DISPATCHER_VHOST}
 
-management.endpoints.web.exposure.include=prometheus
+management.endpoints.web.exposure.include=prometheus,health
+management.endpoint.health.show-components=always
+management.endpoint.health.show-details=always
+management.health.ping.enabled=false
+management.health.diskspace.enabled=false
