--- a/hub/dispatcher/src/main/resources/application.properties
+++ b/hub/dispatcher/src/main/resources/application.properties
@@ -21,7 +21,7 @@ client.preferences.file=file:/config/client.preferences.csv
 # expressed in seconds for readability and use in code,
 # should match the message TTL applied to all client queues (which is in milliseconds)
 dispatcher.default.ttl=86400
-#dispatcher.vhost=${DISPATCHER_VHOST}
+#dispatcher.vhost=${DISPATCHER_VHOST} # this is mandatory but needs to be set in the personal profile properties file
 
 management.endpoints.web.exposure.include=prometheus,health
 management.endpoint.health.show-components=always
