rework: env variable setup

--- a/hub/dispatcher/src/main/resources/application-rfo.properties
+++ b/hub/dispatcher/src/main/resources/application-rfo.properties
@@ -1,4 +1,8 @@
 # Local configuration | Ref.: https://stackoverflow.com/a/32197312/10115198
 # Use: gradle bootRun --args='--spring.profiles.active=local,rfo' | Ref.: https://stackoverflow.com/a/57890208/10115198
-spring.rabbitmq.ssl.key-store=file:/Users/romainfouilland/code/ans/SAMU-Hub-Sante/certs/dispatcher.tmp.p12
-spring.rabbitmq.ssl.trust-store=file:/Users/romainfouilland/code/ans/SAMU-Hub-Sante/certs/truststore
+spring.rabbitmq.ssl.key-store=file:<path/to/this/repo>/certs/dispatcher.tmp.p12
+spring.rabbitmq.ssl.trust-store=file:<path/to/this/repo>/certs/trustStore
+
+dispatcher.vhost="15-15_v1.5"
+
+client.preferences.file=file:<path/to/this/repo>/hub/dispatcher/src/main/resources/client.preferences.csv
