--- a/web/lrm/client/package.json
+++ b/web/lrm/client/package.json
@@ -20,6 +20,7 @@
     "@koumoul/vjsf": "^3.0.0-beta.43",
     "@koumoul/vjsf-markdown": "^0.2.1",
     "@mdi/font": "^7.4.47",
+    "@nuxtjs/dotenv": "^1.4.2",
     "@pinia/nuxt": "^0.5.1",
     "@types/node": "^20.14.9",
     "ajv-formats": "^2.1.1",
@@ -27,6 +28,8 @@
     "core-js": "^3.37.1",
     "eslint-plugin-vuetify": "^2.4.0",
     "jsonpath": "^1.1.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "markdown-it": "^13.0.2",
     "moment": "^2.30.1",
     "nuxt": "^3.12.2",
