feat: working local dispatcher connection

--- a/hub/dispatcher/src/main/resources/application.properties
+++ b/hub/dispatcher/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5671
+spring.rabbitmq.virtual-host=15-nexsis_v1.9
 spring.rabbitmq.ssl.enabled=true
 
 spring.rabbitmq.ssl.key-store-password=${DISPATCHER_KEYSTORE_PASSWORD}
@@ -28,6 +29,9 @@ management.endpoint.health.show-components=always
 management.endpoint.health.show-details=always
 management.health.ping.enabled=false
 management.health.diskspace.enabled=false
+
+# Prevent embedded server to start | Ref.: https://stackoverflow.com/a/56500768/10115198
+spring.main.web-application-type=none
 
 conversion.service.url=http://localhost:8080
 # Resilience4j configuration
