--- a/hub/dispatcher/src/main/resources/application-local.properties
+++ b/hub/dispatcher/src/main/resources/application-local.properties
@@ -1,4 +1,5 @@
 spring.rabbitmq.host=localhost
+spring.rabbitmq.virtual-host=15-nexsis_v1.9
 
 spring.rabbitmq.ssl.key-store-password=certPassword
 spring.rabbitmq.ssl.trust-store-password=trustStore
