feat: dispatcher to use correct converter svc url

--- a/hub/dispatcher/src/main/resources/application.properties
+++ b/hub/dispatcher/src/main/resources/application.properties
@@ -32,7 +32,7 @@ management.health.diskspace.enabled=false
 # Prevent embedded server to start | Ref.: https://stackoverflow.com/a/56500768/10115198
 spring.main.web-application-type=none
 
-conversion.service.url=http://localhost:8080
+conversion.service.url=http://converter:8080
 # Resilience4j configuration
 # resilience4j:
 #   circuitbreaker:
