--- a/hub/dispatcher/src/main/resources/application-local.properties
+++ b/hub/dispatcher/src/main/resources/application-local.properties
@@ -3,3 +3,5 @@ spring.rabbitmq.virtual-host=15-nexsis_v1.9
 
 spring.rabbitmq.ssl.key-store-password=certPassword
 spring.rabbitmq.ssl.trust-store-password=trustStore
+
+conversion.service.url=http://localhost:8080
