--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,14 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAG: ${{ steps.extract_info.outputs.version }}
         run: |
-          ./gradlew jib -Pversion=$TAG --image ghcr.io/${{ github.repository_owner }}/dispatcher:$TAG
+          # Build for each model version
+          for MODEL_VERSION in "1.0" "2.0"; do
+            IMAGE_TAG="${TAG}-model-${MODEL_VERSION}"
+            ./gradlew jib 
+              -Pversion=$TAG \
+              -PmodelVersion=$MODEL_VERSION \
+              --image ghcr.io/${{ github.repository_owner }}/dispatcher:$IMAGE_TAG
+          done
 
       - name: Build and push lrm backend Docker image
         if: steps.extract_info.outputs.project == 'lrm'
