--- a/hub/dispatcher/build.gradle
+++ b/hub/dispatcher/build.gradle
@@ -9,6 +9,8 @@ plugins {
 
 group = 'com.hubsante'
 
+def modelVersion = project.hasProperty('modelVersion') ? project.getProperty('modelVersion') : '2.0'
+
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
@@ -64,7 +66,7 @@ ext {
 }
 
 dependencies {
-    implementation 'com.hubsante:models:2.0'
+    implementation "com.hubsante:models:${modelVersion}"
 
     implementation 'org.codehaus.groovy:groovy-json:3.0.9'
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
@@ -123,7 +125,7 @@ jib {
         image 'eclipse-temurin:21-jre'
     }
     to {
-        image 'romainfd/dispatcher:latest'
+        image "ghcr.io/${System.getenv('GITHUB_REPOSITORY_OWNER')}/dispatcher"
         tags = gitRefs()
     }
 }
