--- a/web/lrm/client/package.json
+++ b/web/lrm/client/package.json
@@ -47,12 +47,18 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.24.7",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "cross-env": "^7.0.3",
     "cypress": "^13.15.0",
     "cypress-cdp": "^1.5.3",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-vue": "^9.5.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.32.0",
     "nuxi": "^3.12.0",
+    "prettier": "^2.8.8",
     "sass": "^1.77.8",
     "typescript": "^5.5.3",
     "vuetify": "^3.6.10"
