--- a/web/lrm/client/package.json
+++ b/web/lrm/client/package.json
@@ -12,6 +12,7 @@
     "start": "nuxt start",
     "generate": "cross-env NODE_OPTIONS=--openssl-legacy-provider nuxt generate",
     "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
+    "lint:css": "stylelint \"**/*.{css,scss,vue}\"",
     "lint": "npm run lint:js",
     "lintfix": "npm run lint:js -- --fix"
   },
@@ -60,6 +61,9 @@
     "nuxi": "^3.12.0",
     "prettier": "^2.8.8",
     "sass": "^1.77.8",
+    "stylelint": "^16.13.2",
+    "stylelint-config-standard": "^37.0.0",
+    "stylelint-scss": "^6.10.1",
     "typescript": "^5.5.3",
     "vuetify": "^3.6.10"
   }
