--- a/web/lrm/client/package.json
+++ b/web/lrm/client/package.json
@@ -64,6 +64,7 @@
     "nuxi": "^3.12.0",
     "postcss-html": "^1.8.0",
     "prettier": "^2.8.8",
+    "prettier-plugin-vue": "^1.1.6",
     "sass": "^1.77.8",
     "stylelint": "^16.13.2",
     "stylelint-config-recommended-scss": "^14.1.0",
