--- a/web/lrm/client/package.json
+++ b/web/lrm/client/package.json
@@ -62,9 +62,11 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.4.2",
     "nuxi": "^3.12.0",
+    "postcss-html": "^1.8.0",
     "prettier": "^2.8.8",
     "sass": "^1.77.8",
     "stylelint": "^16.13.2",
+    "stylelint-config-recommended-vue": "^1.6.0",
     "stylelint-config-standard": "^37.0.0",
     "stylelint-scss": "^6.10.1",
     "typescript": "^5.5.3",
