--- a/web/lrm/client/tsconfig.json
+++ b/web/lrm/client/tsconfig.json
@@ -5,15 +5,20 @@
     "useDefineForClassFields": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
+    "isolatedModules": true,        // ✅ Add this to avoid issues with ESLint and TypeScript
     "strict": true,
     "jsx": "preserve",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "preserveSymlinks": true,
     "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true,
     "noEmit": true,
-    "allowJs": true
+    "allowJs": true,
+    "paths": {
+      "~/*": ["./*"],  // ✅ Alias for project root
+      "@/*": ["./*"]   // ✅ Alternative alias
+    }
   },
   "include": ["**/*.ts", "**/*.d.ts", "**/*.tsx", "**/*.vue"],
   "exclude": ["node_modules","./cypress/support/*"],
