--- a/web/lrm/client/.stylelintrc.json
+++ b/web/lrm/client/.stylelintrc.json
@@ -1,7 +1,8 @@
 {
     "extends": [
       "stylelint-config-standard",
-      "stylelint-config-recommended-vue"
+      "stylelint-config-recommended-vue",
+      "stylelint-config-recommended-scss"
     ],
     "plugins": [
       "stylelint-scss"
