--- a/web/lrm/client/package.json
+++ b/web/lrm/client/package.json
@@ -13,9 +13,9 @@
     "start": "nuxt start",
     "generate": "cross-env NODE_OPTIONS=--openssl-legacy-provider nuxt generate",
     "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
-    "lint:css": "stylelint \"**/*.{css,scss,vue}\"",
-    "lint": "npm run lint:js",
-    "lintfix": "npm run lint:js -- --fix"
+    "lint:css": "stylelint \"**/*.{css,scss}\"",
+    "lint": "npm run lint:js && npm run lint:css",
+    "lintfix": "npm run lint:js -- --fix && npm run lint:css -- --fix"
   },
   "dependencies": {
     "@babel/types": "^7.24.7",
@@ -66,6 +66,7 @@
     "prettier": "^2.8.8",
     "sass": "^1.77.8",
     "stylelint": "^16.13.2",
+    "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-recommended-vue": "^1.6.0",
     "stylelint-config-standard": "^37.0.0",
     "stylelint-scss": "^6.10.1",
@@ -77,7 +78,7 @@
       "eslint --fix",
       "prettier --write"
     ],
-    "*.{css,scss,vue}": [
+    "*.{css,scss}": [
       "stylelint --fix",
       "prettier --write"
     ]
