--- a/.github/workflows/lrm-client-ci.yaml
+++ b/.github/workflows/lrm-client-ci.yaml
@@ -1,17 +1,49 @@
-name: Run Cypress tests
+name: LRM Client CI
 
 on:
   push:
     branches:
-      - main
-
+      - 'main'
+    paths:
+      - 'web/lrm/client/**'
   pull_request:
     branches:
       - '**'
+    paths:
+      - 'web/lrm/client/**'
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22'
+
+      - name: Install dependencies
+        run: npm install
+        working-directory: web/lrm/client
+
+      - name: Run ESLint
+        run: npm run lint:js
+        working-directory: web/lrm/client
+
+      - name: Run Stylelint
+        run: npm run lint:css
+        working-directory: web/lrm/client
+
+      - name: Run Prettier check
+        run: npx prettier --check "**/*.{js,ts,vue,css,scss}"
+        working-directory: web/lrm/client
+
   cypress-run:
     runs-on: ubuntu-22.04
+
     env:
       NUXT_PUBLIC_VHOST_MAP: |
         {
@@ -27,6 +59,7 @@ jobs:
         ]
       NUXT_PUBLIC_MODEL_BRANCH: develop
       NUXT_PUBLIC_BACKEND_LRM_SERVER: integration.hub.esante.gouv.fr
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
