--- a/.github/workflows/lrm-client-ci.yaml
+++ b/.github/workflows/lrm-client-ci.yaml
@@ -15,6 +15,9 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: web/lrm/client
 
     steps:
       - name: Checkout repository
@@ -26,20 +29,16 @@ jobs:
           node-version: '22'
 
       - name: Install dependencies
-        run: npm install
-        working-directory: web/lrm/client
+        run: npm ci
 
       - name: Run ESLint
         run: npm run lint:js
-        working-directory: web/lrm/client
 
       - name: Run Stylelint
         run: npm run lint:css
-        working-directory: web/lrm/client
 
       - name: Run Prettier check
         run: npx prettier --check "**/*.{js,ts,vue,css,scss}"
-        working-directory: web/lrm/client
 
   cypress-run:
     runs-on: ubuntu-22.04
