chore(ci): filter on files in dispatcher tests job

--- a/.github/workflows/dispatcher-tests.yml
+++ b/.github/workflows/dispatcher-tests.yml
@@ -1,13 +1,17 @@
-name: Run Tests
+name: Dispatcher CI
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'hub/dispatcher/**'
 
   pull_request:
     branches:
       - '**'
+    paths:
+      - 'hub/dispatcher/**'
 
 jobs:
   coverage:
